--- a/doc/docker/Dockerfile-Win64-bin
+++ b/doc/docker/Dockerfile-Win64-bin
@@ -16,7 +16,7 @@ RUN apt-get install -y git unzip
 
 WORKDIR /root
 
-RUN git clone --branch 1.0.2 https://github.com/NeuraiProject/Neurai.git
+RUN git clone https://github.com/NeuraiProject/Neurai.git
 
 WORKDIR /root/Neurai
 
