--- a/configure.ac
+++ b/configure.ac
@@ -6,9 +6,9 @@ define(_CLIENT_VERSION_REVISION, 4)
 define(_CLIENT_VERSION_BUILD, 0)
 define(_CLIENT_VERSION_RC, 0)
 define(_CLIENT_VERSION_IS_RELEASE, true)
-define(_COPYRIGHT_YEAR, 2023-2024)
+define(_COPYRIGHT_YEAR, 2024)
 define(_COPYRIGHT_HOLDERS,[The %s developers])
-define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[Neurai Devs]])
+define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[Neurai]])
 AC_INIT([Neurai Core],m4_join([.], _CLIENT_VERSION_MAJOR, _CLIENT_VERSION_MINOR, _CLIENT_VERSION_REVISION, m4_if(_CLIENT_VERSION_BUILD, [0], [], _CLIENT_VERSION_BUILD))m4_if(_CLIENT_VERSION_RC, [0], [], [test]_CLIENT_VERSION_RC),[https://github.com/NeuraiProject/Neurai/issues],[neurai],[https://neurai.org/])
 
 AC_CONFIG_SRCDIR([src/validation.cpp])
