Fix warning in docker files

--- a/doc/docker/Dockerfile-Linux64-bin
+++ b/doc/docker/Dockerfile-Linux64-bin
@@ -38,4 +38,4 @@ RUN CONFIG_SITE=$PWD/depends/x86_64-pc-linux-gnu/share/config.site ./configure -
 
 RUN make -j2
 
-CMD tail -f /dev/null
+CMD ["tail", "-f", "/dev/null"]
