--- a/doc/docker/Dockerfile-Node-Linux
+++ b/doc/docker/Dockerfile-Node-Linux
@@ -3,13 +3,13 @@
 FROM ubuntu:22.04
 
 LABEL maintainer="Asimov"
-LABEL version="1.0.4"
+LABEL version="1.0.5"
 LABEL description="Neurai Docker"
 
 ARG DEBIAN_FRONTEND=nointeractive
 
 RUN apt update
-RUN apt-get install -y git unzip curl
+RUN apt-get install -y git unzip curl wget
 
 RUN apt install -y build-essential libssl-dev libboost-chrono-dev libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libboost-thread-dev libboost-test-dev bison libexpat1-dev libdbus-1-dev libfontconfig-dev libfreetype6-dev libice-dev libsm-dev libx11-dev libxau-dev libxext-dev libevent-dev libxcb1-dev libxkbcommon-dev libminiupnpc-dev libprotobuf-dev libqrencode-dev xcb-proto x11proto-xext-dev x11proto-dev xtrans-dev zlib1g-dev libczmq-dev autoconf automake libtool protobuf-compiler
 
