First DePIN message version

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,8 @@ src/config/neurai-config.h.in
 src/config/stamp-h1
 share/setup.nsi
 share/qt/Info.plist
-
+doc/depin
+doc/docker/bin
 
 
 src/qt/*.moc
